fix Astronomy - Key Term alignment breaks when split across pages #2196

--- a/css/ccap-astronomy.css
+++ b/css/ccap-astronomy.css
@@ -5637,6 +5637,10 @@ div.book div.appendix > div.section div.equation.unnumbered > *:last-child::befo
   width: 100%;
   width: initial;
 }
+.glossary dl dt,
+.glossary dl dd {
+  margin-top: 0px;
+}
 /* -------------------------
  * Equations
  * -------------------------
