--- a/css/refactor/astronomy-skeleton.less
+++ b/css/refactor/astronomy-skeleton.less
@@ -295,3 +295,12 @@ div.book div.appendix > div.section div.equation.unnumbered > *:last-child::befo
     #content>#figure>.style('small'; any);
   }
 }
+
+// Overwrite from new-math-skeleton
+.glossary {
+  dl {
+    dt, dd {
+      margin-top: 0px;
+    }
+  }
+}
